force-app/main/default/objects/Social_Media_Lead__c/fields/Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name__c</fullName>
    <label>Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>