force-app/main/default/objects/Social_Media_Lead__c/fields/AdSet_Id__c.field-meta.xml
<CustomField>
    <fullName>AdSet_Id__c</fullName>
    <label>AdSet Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>