force-app/main/default/objects/Social_Media_Lead__c/fields/AdSet_Name__c.field-meta.xml
<CustomField>
    <fullName>AdSet_Name__c</fullName>
    <label>AdSet Name</label>
    <type>TextArea</type>
</CustomField>