force-app/main/default/objects/Social_Media_Lead__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>