force-app/main/default/objects/Social_Media_Lead__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <formula>LEFT(Mobile_Number__c, (len(Mobile_Number__c)-len(Mobile_Number_No_Country_Code__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>