force-app/main/default/objects/Social_Media_Lead__c/fields/Dataload_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Dataload_Identifier__c</fullName>
    <label>Dataload Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>