force-app/main/default/objects/Social_Media_Lead__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email of the facebook lead</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>