force-app/main/default/objects/Social_Media_Lead__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>full Name of facebook lead</inlineHelpText>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>