force-app/main/default/objects/Social_Media_Lead__c/fields/Looking_for__c.field-meta.xml
<CustomField>
    <fullName>Looking_for__c</fullName>
    <label>Which Property you are looking for?</label>
    <type>TextArea</type>
</CustomField>