force-app/main/default/objects/Social_Media_Lead__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <inlineHelpText>Mobile Number with Country Code</inlineHelpText>
    <label>Mobile Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>