force-app/main/default/objects/Social_Media_Lead__c/fields/Mobile_Number_No_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_No_Country_Code__c</fullName>
    <label>Mobile Number (No Country Code)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>