force-app/main/default/objects/Social_Media_Lead__c/fields/Platform_ig__c.field-meta.xml
<CustomField>
    <fullName>Platform_ig__c</fullName>
    <label>Platform ig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>