force-app/main/default/objects/Social_Media_Lead__c/fields/Raw_FullName__c.field-meta.xml
<CustomField>
    <fullName>Raw_FullName__c</fullName>
    <label>Raw FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>