force-app/main/default/objects/Social_Media_Lead__c/fields/Raw_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Raw_PhoneNumber__c</fullName>
    <label>Raw PhoneNumber</label>
    <type>Phone</type>
</CustomField>