force-app/main/default/objects/Social_Media_Lead__c/fields/Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Recording_URL__c</fullName>
    <label>Recording URL</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>