force-app/main/default/objects/Social_Media_Lead__c/fields/Retailer_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Item_ID__c</fullName>
    <label>Retailer Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>