force-app/main/default/objects/Social_Media_Lead__c/fields/Secondary_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Country_Code__c</fullName>
    <label>Secondary Country Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>