force-app/main/default/objects/Social_Media_Lead__c/fields/Select_call_back_time__c.field-meta.xml
<CustomField>
    <fullName>Select_call_back_time__c</fullName>
    <label>Are you looking for Investment or Reside</label>
    <type>DateTime</type>
</CustomField>