force-app/main/default/objects/Social_Media_Lead__c/fields/SF_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>SF_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Enquiry</label>
    <referenceTo>PropStrength__Request__c</referenceTo>
    <relationshipLabel>Social Media Leads</relationshipLabel>
    <relationshipName>Social_Media_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>