force-app/main/default/objects/Social_Media_Lead__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>propertyfinder</fullName>
            </value>
            <value>
                <fullName>yallacompare</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>ETQ</fullName>
            </value>
            <value>
                <fullName>PropertyGuru</fullName>
            </value>
            <value>
                <fullName>Bayt</fullName>
            </value>
            <value>
                <fullName>TTRU</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>Xiongma</fullName>
            </value>
            <value>
                <fullName>HFLRS</fullName>
            </value>
            <value>
                <fullName>GFN</fullName>
            </value>
            <value>
                <fullName>ETERNITY CHINA</fullName>
            </value>
            <value>
                <fullName>HFSO</fullName>
            </value>
            <value>
                <fullName>HFSH2</fullName>
            </value>
            <value>
                <fullName>LGMRU</fullName>
            </value>
            <value>
                <fullName>JEAF</fullName>
            </value>
            <value>
                <fullName>EXCHSH2</fullName>
            </value>
            <value>
                <fullName>AFF-NABD</fullName>
            </value>
            <value>
                <fullName>AZ-AFF</fullName>
            </value>
            <value>
                <fullName>toutiao</fullName>
            </value>
            <value>
                <fullName>AFF - YX</fullName>
            </value>
            <value>
                <fullName>Google-search</fullName>
                <label>google-search</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>