force-app/main/default/objects/Social_Media_Lead__c/fields/UTM_Medium_Key__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_Key__c</fullName>
    <formula>Form_ID__c  &amp;  AdSet_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Medium Key</label>
    <type>Text</type>
</CustomField>