force-app/main/default/objects/Social_Media_Lead__c/fields/When_are_you_looking_to_buy__c.field-meta.xml
<CustomField>
    <fullName>When_are_you_looking_to_buy__c</fullName>
    <label>What is your ideal timeline for buying a</label>
    <type>TextArea</type>
</CustomField>