force-app/main/default/objects/Social_Media_Lead__c/fields/Would_you_like_to_invest_in_Dubai__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_invest_in_Dubai__c</fullName>
    <label>Are you venturing into property investme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>