force-app/main/default/objects/Social_Media_Lead__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Formatted_Phone__c</columns>
    <columns>SF_Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_ID__c</columns>
    <columns>Lead_ID__c</columns>
    <columns>Page_ID__c</columns>
    <columns>Processed__c</columns>
    <columns>Remarks__c</columns>
    <columns>Result__c</columns>
    <columns>SF_Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>