force-app/main/default/objects/Social_Media_Lead__c/listViews/Todays_SML.listView-meta.xml
<ListView>
    <fullName>Todays_SML</fullName>
    <columns>NAME</columns>
    <columns>SF_Account__c</columns>
    <columns>SF_Lead__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_ID__c</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays SML</label>
</ListView>